@@ -123,3 +123,4 @@ v 1.9:
 	- Check for a null player object in the PlayerTeleportEvent.
 	- Trap errors in fetching the mirrors map.
 	- Fixed an infinite loop error when using '/manudel' on a logged in player. It caused setDefaultGroup to trigger a bukkit update when no GM User existed yet.
+	- do not allow inherited permissions to negate higher perms.
